--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<div class="container">HOLA</div>
-<router-outlet></router-outlet>
+<!-- <div style="height: -webkit-fill-available !important"> -->
+<div class="d-flex flex-column" style="height: -webkit-fill-available !important">
+    <app-navbar #mainNavbar></app-navbar>
+    <router-outlet></router-outlet>
+    <app-footer class="mt-auto"></app-footer>
+</div>
