--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
                 </span>
             </div>
 
-            <button class="btn btn-primary btn-block" (click)="loginWithEmail()">
+            <button class="btn btn-primary btn-block" (click)="login()">
                 Log in
             </button>
 
