--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,34 +2,46 @@
 
     <h1 class="my-5" style="font-weight: bold;">Comparador de precios</h1>
 
-    <div class="row mx-0" style="border: 1px solid #ccc">
-        <a [href]="product.url" target="_blank" class="col-4">
+    <div class="row mx-0" style="border: 1px solid #ccc" *ngIf="product">
+        <div class="col-4">
             <img [src]="product.image" [alt]="product.name" class="card-img-top">
-        </a>
+        </div>
 
         <div class="col">
             <div class="card-body">
                 <div class="row m-0 text-align-between">
                     <span>{{ product.brand }}</span>
-                    <span class="ml-auto">Sku: {{ product.sku }}</span>
+                    <!-- <span class="ml-auto">Sku: {{ product.sku }}</span> -->
                 </div>
 
                 <h2 class="card-title my-3">{{ product.name }}</h2>
+                <div><small class="my-0">Model: {{ product.model }}</small></div>
 
-                <div>
+                <!-- <div>
                     <div style="text-decoration: line-through;">
                         {{ product.normal_price | number }}
                     </div>
                     <div style="font-weight: bold;">
                         {{ product.price | number }}
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 
-    <div class="row mx-0 mt-5">
-        <table class="table table-bordered">
+    <div class="row mx-0 mt-5 justify-content-center">
+
+        <div class="d-flex" *ngIf="loading">
+            <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+        </div>
+
+        <div *ngIf="!loading && products.length <= 0" class="col-8 text-center alert alert-warning">
+            No se encontraron productos relacionados!
+        </div>
+
+        <table class="table table-bordered" *ngIf="!loading && products.length > 0">
             <thead>
                 <tr>
                     <th scope="col">Productos</th>
@@ -52,8 +64,8 @@
                             </div>
                         </a>
                     </td>
-                    <td class="align-middle">Exito</td>
-                    <td class="align-middle">
+                    <td class="align-middle">{{ item.store }}</td>
+                    <td [class]="'align-middle '+ getScalaPrice(item.price)">
                         <div>
                             <div style="text-decoration: line-through;">
                                 {{ item.normal_price | number }}
@@ -68,7 +80,7 @@
         </table>
     </div>
 
-    <div class="row my-5 mx-0 justify-content-center">
+    <div class="row my-5 mx-0 justify-content-center" *ngIf="!loading">
         <button [routerLink]="['/home']" routerLinkActive="active" class="btn btn-primary">
             Realizar otra busqueda
         </button>
