--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer class="bg-dark pt-3">
+<footer class="bg-dark ">
     <div class="container">
-        <img src="../../../assets/logo.png" alt="" width="150">
+        <!-- <img src="../../../assets/logo.png" alt="" width="150"> -->
 
         <div class="row justify-content-center" style="color: gray;">
             Todos los derechos reservados
