--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,11 +1,14 @@
 .bg-red {
-    background-color: red;
+    background-color: #f8d7da;
+    color           : #721c24;
 }
 
 .bg-orange {
-    background-color: orange;
+    background-color: #fff3cd;
+    color           : #856404;
 }
 
 .bg-green {
-    background-color: green;
+    background-color: #c3e6cb;
+    color           : #155724;
 }
