--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -11,20 +11,10 @@
             <div class="card-body">
                 <div class="row m-0 text-align-between">
                     <span>{{ product.brand }}</span>
-                    <!-- <span class="ml-auto">Sku: {{ product.sku }}</span> -->
                 </div>
 
                 <h2 class="card-title my-3">{{ product.name }}</h2>
                 <div><small class="my-0">Model: {{ product.model }}</small></div>
-
-                <!-- <div>
-                    <div style="text-decoration: line-through;">
-                        {{ product.normal_price | number }}
-                    </div>
-                    <div style="font-weight: bold;">
-                        {{ product.price | number }}
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
@@ -60,6 +50,7 @@
                                     <div><small class="my-0">sku: {{ item.sku }}</small></div>
                                     <div><small class="my-0">Marca: {{ item.brand }}</small></div>
                                     <div><small class="my-0">Modelo: {{ item.model }}</small></div>
+                                    <div class="mt-3"><small style="color: gray;">Ultima actualización: {{ item.updated_date | date }}</small></div>
                                 </div>
                             </div>
                         </a>
@@ -67,9 +58,9 @@
                     <td class="align-middle">{{ item.store }}</td>
                     <td [class]="'align-middle '+ getScalaPrice(item.price)">
                         <div>
-                            <div style="text-decoration: line-through;">
+                            <small style="text-decoration: line-through;">
                                 {{ item.normal_price | number }}
-                            </div>
+                            </small>
                             <div style="font-weight: bold;">
                                 {{ item.price | number }}
                             </div>
