--- a/src/app/components/app-navbar/app-navbar.component.html
+++ b/src/app/components/app-navbar/app-navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg">
   <a class="navbar-brand py-0" href="#">
-    <img src="../../../assets/logo.png" alt="" width="80">
+    <img src="../../../assets/logo.png" alt="" width="200">
   </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
