--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,7 +1,4 @@
 <div class="container">
-
-    <h1 class="my-5" style="font-weight: bold;">Comparador de precios</h1>
-
     <div class="row mx-0" style="border: 1px solid #ccc" *ngIf="product">
         <div class="col-4">
             <img [src]="product.image" [alt]="product.name" class="card-img-top">
@@ -18,6 +15,14 @@
             </div>
         </div>
     </div>
+
+    <div style="display: block;" *ngIf="lineChartData.length > 0" class="my-5">
+        <canvas baseChart width="400" height="100" [colors]="colors" [datasets]="lineChartData"
+            [labels]="lineChartLabels" [options]="lineChartOptions" [legend]="lineChartLegend"
+            [chartType]="lineChartType">
+        </canvas>
+    </div>
+
 
     <div class="row mx-0 mt-5 justify-content-center">
 
@@ -42,18 +47,31 @@
             <tbody>
                 <tr *ngFor="let item of products">
                     <td>
-                        <a [href]="item.url" target="blank" style="text-decoration: none; color:#000">
-                            <div class="media align-items-center">
-                                <img class="mr-3" width="100" [src]="item.image" alt="Generic placeholder image">
-                                <div class="flex-column">
-                                    <p class="my-0">{{ item.name }}</p>
-                                    <div><small class="my-0">sku: {{ item.sku }}</small></div>
-                                    <div><small class="my-0">Marca: {{ item.brand }}</small></div>
-                                    <div><small class="my-0">Modelo: {{ item.model }}</small></div>
-                                    <div class="mt-3"><small style="color: gray;">Ultima actualización: {{ item.updated_date | date }}</small></div>
+                        <div class="media align-items-center">
+                            <img class="mr-3" width="100" [src]="item.image" [alt]="item.name">
+                            <div class="flex-column" style="width: 100%;">
+                                <p class="my-0">{{ item.name }}</p>
+                                <div><small class="my-0">sku: {{ item.sku }}</small></div>
+                                <div><small class="my-0">Marca: {{ item.brand }}</small></div>
+                                <div><small class="my-0">Modelo: {{ item.model }}</small></div>
+                                <div class="row justify-content-between mt-5 mx-0">
+                                    <div>
+                                        <button class="btn btn-outline-primary btn-sm mr-2"
+                                            (click)="getHistorialPrecio(item.id)">
+                                            Historial
+                                        </button>
+                                        <a class="btn btn-outline-info btn-sm" [href]="item.url" target="blank">Ver en
+                                            tienda</a>
+                                    </div>
+                                    <div>
+                                        <small style="color: gray;">
+                                            Ultima actualización: {{ item.updated_date | date }}
+                                        </small>
+                                    </div>
                                 </div>
+
                             </div>
-                        </a>
+                        </div>
                     </td>
                     <td class="align-middle">{{ item.store }}</td>
                     <td [class]="'align-middle '+ getScalaPrice(item.price)">
